# cli-saleorder-sync

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  README_VNPAY_SYNC.md  SOLUTION_SUMMARY.md  VNPAY_SYNC_SUMMARY.md  all-orders-2026-03-26.json  atm-orders-2026-03-26.json  b4b-orders-2026-03-13.json  extract_today_orders.py  import_and_issue_invoices.py  odoo-orders-2026-03-15.json  odoo-orders-2026-03-17-vnpay.json  odoo-orders-2026-03-17.json  odoo-orders-2026-03-18-vnpay.json  odoo-orders-2026-03-18.json  odoo-orders-2026-03-19-new.json  odoo-orders-2026-03-19-vnpay.json  odoo-orders-2026-03-19.json  odoo-orders-2026-03-20-all.json  odoo-orders-2026-03-21-all.json  odoo-orders-2026-03-21-vnpay.json  odoo-orders-2026-03-21-vnpayqr.json  odoo-orders-2026-03-22-atm.json  odoo-orders-2026-03-22-vnpay.json  odoo-orders-2026-03-22-vnpayqr.json  odoo-orders-2026-03-23-vnpay.json  odoo-orders-2026-03-23-vnpayqr.json  odoo-orders-2026-03-24-vnpay.json  odoo-orders-2026-03-24-vnpayqr.json  odoo-orders-2026-03-26-all.json  odoo-orders-2026-03-27-digital.json  odoo-orders-2026-03-27.json  odoo-orders-2026-04-02-vnpay-vnpayqr.json  odoo-orders-2026-04-03-thẻ-atm-vnpay-vnpayqr.json  odoo-orders-2026-04-04-thẻ-atm-vnpay-vnpayqr.json  odoo-orders-2026-04-05-thẻ-atm-vnpay-vnpayqr.json  odoo-orders-2026-04-06-thẻ-atm-vnpay-vnpayqr.json  (+72 more)
.claude/: metadata.json  settings.json
docs/: README.md  code-standards.md  codebase-summary.md  deployment-guide-reference.md  deployment-guide.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
src/: __init__.py  (+11 more)
(+27 files in other folders)
